--- a/Spotify-wrapped/index.html
+++ b/Spotify-wrapped/index.html
@@ -1,81 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Spotify Wrapped Clone" />
+    <title>My Spotify Wrapped</title>
+
+    <!-- Add Spotify Web Playback SDK -->
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/icon.svg
-  "
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Primary SEO -->
-    <title>Your Wrapped – Personalized Spotify Listening Stats</title>
-    <meta
-      name="description"
-      content="Your Wrapped is a personal dashboard that visualizes your Spotify listening stats: top artists, top tracks, and more – instantly generated from your account."
-    />
-    <meta
-      name="keywords"
-      content="spotify wrapped, spotify stats, listening stats, top artists, top tracks, music analytics"
-    />
-    <meta name="author" content="Jesper Selenius" />
-
-    <!-- Open Graph / Social -->
-    <meta
-      property="og:title"
-      content="Your Wrapped – Your Spotify Listening Stats"
-    />
-    <meta
-      property="og:description"
-      content="Log in with Spotify and see your personalized Wrapped-style overview: top artists, top tracks, and listening trends."
-    />
-    <!-- Replace this with your deployed URL when you have one -->
-    <meta property="og:url" content="https://yourwrapped.example.com/" />
-    <meta property="og:type" content="website" />
-    <!-- Optional: custom preview image -->
-    <meta
-      property="og:image"
-      content="https://yourwrapped.example.com/og-image.png"
-    />
-
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="Your Wrapped – Your Spotify Listening Stats"
-    />
-    <meta
-      name="twitter:description"
-      content="View a Spotify Wrapped-style summary of your listening: top artists, tracks, and more."
-    />
-    <meta
-      name="twitter:image"
-      content="https://yourwrapped.example.com/og-image.png"
-    />
-
-    <!-- PWA-ish basics (optional but nice) -->
-    <meta name="theme-color" content="#1db954" />
-
-    <title>Your Wrapped</title>
   </head>
   <body>
     <div id="root"></div>
-    <footer
-      style="
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        text-align: center;
-        font-size: 12px;
-        padding: 4px;
-        color: #888;
-      "
-    >
-      Created by Jesper Selenius
-    </footer>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
