Badges into db, API handling for badges.

--- a/Spotify-wrapped/index.html
+++ b/Spotify-wrapped/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Spotify Wrapped Clone" />
-    <title>My Spotify Wrapped</title>
+    <title>Spotify Wrappy</title>
 
     <!-- Add Spotify Web Playback SDK -->
     <script src="https://sdk.scdn.co/spotify-player.js"></script>
